# stepwise

./: .env.dev.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  README_DEVELOPMENT.md  docker-compose.dev.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  ci_postgres.yml  container_scan.yml  dependency_scan.yml  deploy_fly.yml  review_apps.yml  security_scan.yml  sentry_sourcemaps.yml  static_analysis.yml  stripe_webhook_test.yml  weekly_metrics.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  fly.toml  main.py  pyproject.toml  pytest.ini  stepwise.db.backup
backend/alembic/: env.py
backend/alembic/versions/: 6e29929e24cf_initial_schema.py  74b08f49d4c6_add_security_hardening_models_and_fields.py  b318c97515a6_initial_migration.py
backend/api/: __init__.py  billing.py  dependencies.py  email.py  feedback.py  feedback_stats.py  reports.py  sessions.py  stats.py
backend/data/: keywords.json
backend/database/: __init__.py  engine.py
backend/i18n/: __init__.py  messages.py
backend/middleware/: __init__.py  beta_access.py
backend/models/: __init__.py  base.py  email_preference.py  email_send_log.py  email_throttle.py  enums.py  event_log.py  feedback.py  hint_content.py  problem.py  response.py  session.py  solution.py  subscription.py
backend/schemas/: errors.py  problem.py  response.py  solution.py  stats.py
backend/scripts/: send_weekly_digests.py
backend/services/: __init__.py  email_preference_service.py  email_service.py  email_throttle_service.py  entitlements.py  event_logger.py  hint_generator.py  hint_postprocessor.py  learning_summary.py  llm_client.py  problem_classifier.py  rate_limiter.py  session_manager.py  solution_generator.py  stats_service.py  stripe_service.py  understanding_evaluator.py  weekly_digest.py
backend/tests/: conftest.py
backend/tests/contract/: test_api_key_protection.py  test_beta_gate.py  test_email_unsubscribe.py  test_event_logging.py  test_learning_summary_api.py  test_rate_limiting.py  test_sessions_api.py  test_stats_api.py  test_weekly_digest_script.py
backend/tests/unit/: test_beta_access_middleware.py  test_email_preference_service.py  test_email_service.py  test_entitlements.py  test_feedback.py  test_feedback_stats.py  test_hint_generator.py  test_hint_postprocessor.py  test_learning_summary.py  test_pdf_report.py  test_problem_classifier.py  test_rate_limiter.py  test_solution_generator.py  test_stats_service.py  test_understanding_evaluator.py  test_validation.py  test_weekly_digest.py
backend/utils/: validation.py
docs/: BETA_OUTREACH.md  CODE_REVIEW_CHECKLIST.md  COMPLIANCE_CHECKLIST.md  EMAIL_TEMPLATES.md  MANUAL_QA_CHECKLIST.md  PARENT_DASHBOARD_SPEC.md  PRIVACY_POLICY.md  PRODUCTION_RUNBOOK.md  PROGRESS.md  QA_SUMMARY_2026-01-10.md  RELEASE_NOTES.md  SECURITY_POSTURE.md  TERMS_OF_SERVICE.md  US_BETA_FEEDBACK.md  US_BETA_RECRUITMENT_KIT.md  US_PRIVATE_BETA.md  US_PRIVATE_BETA_OPS.md  bad.md
frontend/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  Dockerfile.dev  fly.toml  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: BetaGateModal.tsx  Dashboard.tsx  ErrorMessage.tsx  FeedbackDashboard.tsx  FeedbackModal.tsx  GoalProgress.tsx  GradeSelector.tsx  HintDialog.tsx  LocaleSelector.tsx  OnboardingModal.tsx  ProblemInput.tsx  SessionHistoryList.tsx  SessionSummary.tsx  SolutionViewer.tsx  SubscriptionBanner.tsx  SuccessMessage.tsx  TrendChart.tsx  UpgradeModal.tsx  index.ts
frontend/src/hooks/: useBetaCode.ts  useOnboarding.ts  useUserId.ts
frontend/src/i18n/: index.tsx
frontend/src/i18n/locales/: en-US.json  zh-CN.json
frontend/src/services/: api.ts  billingApi.ts  sessionApi.ts
frontend/src/stores/: sessionStore.ts
frontend/src/types/: enums.ts
frontend/tests/e2e/: beta-gate.spec.ts  email-reports.spec.ts  feedback-dashboard.spec.ts  feedback.spec.ts  hint-flow.spec.ts  onboarding.spec.ts  pdf-report.spec.ts
scripts/: README_BETA_CODES.md  bad.sh  beta_stats.py  deploy_staging.sh  dev_down.sh  dev_up.sh  digest_dry_run.sh  generate_beta_codes.py  monitor_unsubscribe_rate.py  run_local_qa.sh  seed_demo_data.py  verify_beta_code.py
test/: bad_code.py
